# excel_sample_excercise

./: .~lock.eu_companies.xlsx#  .~lock.records.xlsx#  Cargo.toml  README.org  records.xlsx
init/: Cargo.toml
init/src/: lib.rs  log.rs
src/: data_gen.rs  main.rs  reader.rs  utils.rs
