[package]
name = "eu_excel_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
fake = "3.1"
umya-spreadsheet = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
quick-xml = "0.37.5"
thiserror = "2.0.12"
# quick-xml       = "0.27"
