[package]
name = "eu_excel_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.23"
log = "0.4"
ctrlc = "3.4.5"
anyhow = "1.0.95"
clap-verbosity-flag = "3.0.2"
console = "0.15.10"
env_logger = "0.11.7"

fake = "3.1"
umya-spreadsheet = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
quick-xml = "0.37.5"
thiserror = "2.0.12"

init = { version = "0.1", path = "./init"}
calamine = "0.27.0"
prettytable = "0.10.0"
[patch.crates-io]
calamine = { git = "https://github.com/prophittcorey/calamine", branch = "fix/zip-3.0" }
